Styled friend widgets on RP about page mobile

--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -330,9 +330,7 @@
 // !Header > Profile Nav
 //----------------------------------------------------------------------------------------------------
 .header-user
-  width: 536px
-  float: right
-  border-left: 2px solid #dedddb
+  display: none
 
 #header nav.sign_in
   float: left
