--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -1,6 +1,6 @@
 - @title = @plan.title.dup if @plan.present? && @plan.title.present?
 - @meta_url = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
-- content_for :sidebar_class, 'plan'
+- content_for :sidebar_class, 'rp-about-sidebar'
 
 - content_for :additional_meta do
 
