YV-1031 footer updates

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,7 +3,7 @@
     %p.links
       = link_to( t("now"),  external_url(:now))
       = link_to( t("about"),about_path)
-      = link_to( t("jobs"), "http://blog.youversion.com/jobs")
+      = link_to( t("jobs"), "https://www.youversion.com/jobs")
       = link_to( t("privacy policy"), privacy_path)
       = link_to( t("terms"), terms_path)
       = link_to( t("press"), press_path)
