YV-547 allow 100% free text to localize on app page

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -71,6 +71,18 @@
   font-size: 13px
   line-height: 1.7
 
+  .app-free-overlay
+    position: absolute
+    z-index: 1
+    left: 258px
+    top: 86px
+    font-size: 15px
+    font-weight: bold
+    color: #fff
+    +transform(rotate(-30deg))
+    width: 140px
+    text-align: center
+
   #mobile_content
     width: 50%
     float: left
