--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -29,19 +29,15 @@ br + textarea
 #flash_notice
   @extend .clearfix
   +round
-  +box-shadow(#fff 0 1px 0 0)
   background:
     repeat: no-repeat
     position: right bottom
-  border: 1px solid
   font-size: 16px
   margin: 0 0 10px 70px
   padding: 10px 20px
-  box-sizing: border-box
   width: 910px
   opacity: 0.95
   z-index: 5
-  text-shadow: #fff 0 1px 0
   position: fixed
   cursor: pointer
   +box-sizing(border-box)
@@ -53,10 +49,9 @@ br + textarea
 
 #flash_notice
   background:
-    color: #d9e4c9
+    color: #6AB750
     image: image-url("flash_notice.png")
-  border-color: #91b164
-  color: #4b7518
+  color: #fff
 
 .form_errors
   font-size: 16px
