--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -31,6 +31,11 @@
     label
       padding-right: 5px
 
+  .environment
+    position: absolute
+    left: 75px
+    bottom: -5px
+
   .copyright
     float: right
     clear: right
