Fixed broken RP calendar widget in sample reading plans

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -525,6 +525,59 @@ html[data-locale="en"]
             padding: 3px 20px 0
 
 
+// !Reading plan sample calendar widget
+
+#widget-plan-controls
+  #calendar.rp-sample
+
+    a,
+    h4,
+    span,
+    div
+      box-sizing: border-box
+
+    .calendar-prev,
+    .calendar-day,
+    .calendar-next
+      float: left
+      height: auto
+
+      a
+        width: 69px
+        height: 70px
+        padding: 9px 0 0
+
+        .calendar-arrows
+          height: 21px
+          display: block
+          width: 21px
+          margin: 0 auto 5px
+          background: image-url("pagination-arrows-rp.png") no-repeat
+          background-size: 84px 21px
+
+        .calendar-arrow-txt
+          padding: 10px 0 0
+
+      h4
+        width: 160px
+        height: 70px
+        margin: 0
+        text-align: center
+        padding: 25px 0 0
+
+    .calendar-prev
+      a
+        .calendar-arrows
+          background-position: -21px 0
+
+    .calendar-day
+
+    .calendar-next
+      a
+        .calendar-arrows
+          background-position: -42px 0
+
+
 // --- Custom widgets ------
 
 #widget-100m-ad
