--- a/app/views/sidebars/plans/_sample.html.haml
+++ b/app/views/sidebars/plans/_sample.html.haml
@@ -19,7 +19,7 @@
   %h3.hd
     = link_to plan.name, plan_path(plan)
 
-  #calendar.bd.nopad.calendar
+  #calendar.bd.nopad.rp-sample
     - cal_text = t("plans.calendar")
 
     .calendar-prev
