--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -2,6 +2,12 @@
   title = ""
   title << @title << " | " if @title.present?
   title << (@subtitle || @site.title).to_s
+  case request.env["X_MOBILE_DEVICE"]
+  when /iphone|iPhone|ipad|iPad|ipod|iPod/
+    @user_agent = "ios"
+  when /android|Android/
+    @user_agent = "android"
+  end
 
 %title= title
 
@@ -34,6 +40,8 @@
 = content_for?(:additional_meta) ? yield(:additional_meta) : nil
 = content_for?(:stylesheets) ? yield(:stylesheets) : nil
 
+- @native_url = session[:native_url] if session[:native_url].present?
+- session.delete(:native_url)
 - if @native_url.present?
   %meta{name: "native-url", content: @native_url}
 
@@ -47,17 +55,17 @@
             nativeTimeout,
             launchTime = +new Date;
 
-        
+
         if (!nativeUrl) return;        
         if (document.cookie && ~document.cookie.indexOf('noNative=true')) return;
 
         nativeTimeout = setTimeout(function() {
           var now = +new Date
-            , tenDays = 864000000
+            , oneMinute = 60000
           if (now - launchTime < 1500) {
             document.cookie = [
               'noNative=true',
-              'expires=' + new Date(now + tenDays).toUTCString()
+              'expires=' + new Date(now + oneMinute).toUTCString()
             ].join('; ');
           }
         }, 1000);
