--- a/app/views/users/_mobile_menu.html.haml
+++ b/app/views/users/_mobile_menu.html.haml
@@ -11,8 +11,7 @@
     password:       {path: "/settings/password", string: t('users.edit password')},
     # removed for now until we're comfortable turning on image uploads for mobile web.
     # picture: {path: "/settings/picture", string: t('users.edit picture')},
-    # removed for 3.1 Social launch - will make a comeback
-    # connections: {path: "/settings/connections", string: t('users.edit connections')},
+    connections: {path: "/settings/connections", string: t('users.edit connections')},
     devices: {path: "/settings/devices", string: t('users.edit devices')},
     account: {path: "/settings/delete_account", string: t('users.edit account_existence')},
     vod_subscriptions: {path: "/settings/vod_subscriptions", string: t('users.vod_subscriptions')}
