--- a/app/views/connections/index.html.haml
+++ b/app/views/connections/index.html.haml
@@ -1,10 +1,35 @@
-- @title = "#{t('meta.connections.index.title')} | #{@user.name || @user.username}"
+:ruby
+  @title = "#{t('meta.connections.index.title')} | #{@user.name || @user.username}"
+  @setting_selected = :connections #for settings layout
 
-- content_for :title do
-  = t('meta.connections.index.title')
-
-- content_for :sidebar do
-  = render partial: "widgets/settings"
+%h2=t('users.edit connections')
 
 %article
-  = render partial: "connections/tabs"
+  #connection_info
+    %p= t('connection marketing')
+
+    - if @user.present? && @user.connections.present?
+      - @networks.each do |network|
+        = render partial: 'network', locals: {user: @user, network: network }
+
+
+
+
+        -# -else # No errors, show friends - only want to show the following as long as we don't have any errors.
+
+        -#   - if @friends.present?
+        -#     %p= t('social.connection friends', connection: connection_name)
+        -#     %ul.resource_list
+        -#       - @friends.each do |u|
+        -#         %li
+        -#           - if u.user_avatar_url
+        -#             .float_left.gutter_right_half
+        -#               %img{src: u.user_avatar_url.px_48x48}
+        -#           %p.gutter_top_half.float_left
+        -#             = link_to u.name || u.username, u
+        -#             - if u.name
+        -#               %br
+        -#               %b= u.username
+        -#   - else
+        -#     %p.notice= t('social.errors.no friends', connection: connection_name)
+
