--- a/app/views/connections/_network.html.haml
+++ b/app/views/connections/_network.html.haml
@@ -3,14 +3,22 @@
 -# network
 
 - connection_name = t("social.#{network}.name")
-- if user.connections[network.to_s].present?
-  %p
-    = t('social.connected as', connection: connection_name, username: user.connections[network.to_s].nickname)
-    %span.confirm
-      %a{href: delete_connection_path(network.to_sym), "data-confirm-text" => t('confirm danger'), "data-method" => "delete", rel: "nofollow"}
-        = t('social.remove connection')
+%span.facebook-connect
+  = image_tag "svg/facebook-logo.svg"
+  - if user.connections[network.to_s].present?
+    %a{href: delete_connection_path(network.to_sym), "data-confirm-text" => t('confirm danger'), "data-method" => "delete", rel: "nofollow", class: "connect-delete"}
+      = t('social.remove connection')
   - if @error.present?
     %p.error= @error
-- else
-  %p
-    = link_to t('connect to', connection: connection_name ), new_connection_path(network.to_s), class: "action_button_blue"
+  - else
+    = link_to t('connect to', connection: connection_name ), new_connection_path(network.to_s), class: "connect-add"
+
+%span.twitter-connect
+  = image_tag "svg/twitter-logo.svg"
+  - if user.connections[network.to_s].present?
+    %a{href: delete_connection_path(network.to_sym), "data-confirm-text" => t('confirm danger'), "data-method" => "delete", rel: "nofollow", class: "connect-delete"}
+      = t('social.remove connection')
+  - if @error.present?
+    %p.error= @error
+  - else
+    = link_to t('connect to', connection: connection_name ), new_connection_path(network.to_s), class: "connect-add"
