--- a/app/views/connections/_network.html.haml
+++ b/app/views/connections/_network.html.haml
@@ -3,22 +3,12 @@
 -# network
 
 - connection_name = t("social.#{network}.name")
-%span.facebook-connect
-  = image_tag "svg/facebook-logo.svg"
+%span{class: "#{network.to_s}-connect"}
+  = image_tag "svg/#{network.to_s}-logo.svg"
   - if user.connections[network.to_s].present?
     %a{href: delete_connection_path(network.to_sym), "data-confirm-text" => t('confirm danger'), "data-method" => "delete", rel: "nofollow", class: "connect-delete"}
       = t('social.remove connection')
-  - if @error.present?
-    %p.error= @error
-  - else
-    = link_to t('connect to', connection: connection_name ), new_connection_path(network.to_s), class: "connect-add"
-
-%span.twitter-connect
-  = image_tag "svg/twitter-logo.svg"
-  - if user.connections[network.to_s].present?
-    %a{href: delete_connection_path(network.to_sym), "data-confirm-text" => t('confirm danger'), "data-method" => "delete", rel: "nofollow", class: "connect-delete"}
-      = t('social.remove connection')
-  - if @error.present?
-    %p.error= @error
+    - if @error.present?
+      %p.error= @error
   - else
     = link_to t('connect to', connection: connection_name ), new_connection_path(network.to_s), class: "connect-add"
