Styled mobile page for connected accounts in user settings

--- a/app/assets/stylesheets/mobile/_user_settings.sass
+++ b/app/assets/stylesheets/mobile/_user_settings.sass
@@ -111,8 +111,46 @@
 .vod_form
   select#version_id
     margin-left: 0
-    
+
   select#hour, select#minute, select#meridian
     width: 70px
 
 
+// !User settings - connected devices
+
+.facebook-connect,
+.twitter-connect
+  display: block
+  width: 100px
+  height: 100px
+  border: 1px solid #dedddb
+  text-align: center
+  +border-radius(5px)
+  position: relative
+  float: left
+  margin: 0 15px 0 0
+  line-height: 99px
+
+  img
+    width: 64px
+    margin: 0 auto
+
+  a
+    display: block
+    text-indent: 100%
+    overflow: hidden
+    white-space: nowrap
+    height: 24px
+    width: 24px
+    +border-radius(3px)
+    position: absolute
+    top: -5px
+    right: -5px
+
+  a.connect-add
+    background: #6AB750 image-url("svg/icon-add.svg") no-repeat center center
+    background-size: 12px 12px
+
+  a.connect-delete
+    background: #FF0000 image-url("svg/icon-delete.svg") no-repeat center center
+    background-size: 12px 12px
