Bookmark Feed with Label Support

--- a/app/assets/stylesheets/_bookmarks.sass
+++ b/app/assets/stylesheets/_bookmarks.sass
@@ -47,11 +47,18 @@
   .label
     margin: 0 0 0 1em
     float: left
-    padding: 5px 0
-
+    padding: 5px
     .moment-bm-labels-link
       background-color: #ccc
-
+    .selected
+      padding: 5px
+      color: #fff
+      +border-radius(4px)
+      background-color: #bbbbbb
+    .label-count
+      padding: 2px 3px
+      background-color: #ccc
+      +border-radius(10px)
   .label:first-child
     margin-left: 0
 
