--- a/app/assets/stylesheets/mobile/_bookmarks.sass
+++ b/app/assets/stylesheets/mobile/_bookmarks.sass
@@ -48,10 +48,8 @@
   .label
     margin: 0 5px 5px 0
     float: left
-
     .moment-bm-labels-link
       background-color: #ccc
-
     a
       color: #fff
       padding: 0 7px
@@ -61,6 +59,13 @@
       height: 30px
       line-height: 28px
       display: block
+      .selected
+        padding: 5px
+        color: #fff
+        background-color: #bbbbbb
+    .label-count
+      background-color: #ccc
+      +border-radius(10px)
 
   .label:first-child
     margin-left: 0
