Style bookmark labels

--- a/app/assets/stylesheets/mobile/_bookmarks.sass
+++ b/app/assets/stylesheets/mobile/_bookmarks.sass
@@ -60,10 +60,11 @@
       line-height: 28px
       display: block
       .selected
-        padding: 5px
+        padding: 8px
         color: #fff
         background-color: #bbbbbb
     .label-count
+      padding: 1px 5px
       background-color: #ccc
       +border-radius(10px)
 
