--- a/app/assets/stylesheets/_bookmarks.sass
+++ b/app/assets/stylesheets/_bookmarks.sass
@@ -45,20 +45,28 @@
   margin: 0
 
   .label
-    margin: 0 0 0 1em
+    margin: 4px 0 4px 1em
     float: left
-    padding: 5px
+    padding: 0 5px
+    position: static
+    +border-radius(4px)
+    border: 1px solid #ccc
     .moment-bm-labels-link
       background-color: #ccc
-    .selected
-      padding: 5px
-      color: #fff
-      +border-radius(4px)
-      background-color: #bbbbbb
     .label-count
+      color: #fff
       padding: 2px 3px
       background-color: #ccc
       +border-radius(10px)
+      min-width: 12px
+    &.selected
+      padding: 0 5px
+      margin: 4px
+      +border-radius(4px)
+      background-color: #bbbbbb
+      a
+        color: #fff
+
   .label:first-child
     margin-left: 0
 
