Styled labels in profile > bookmarks

--- a/app/assets/stylesheets/mobile/_users.sass
+++ b/app/assets/stylesheets/mobile/_users.sass
@@ -285,17 +285,13 @@ article.profile
 .moment-bm-labels-link
   display: inline-block
   padding: 0px 7px 2px
-  background-color: #bbb
   +border-radius(4px)
   margin-left: 2px
-  color: #fff
+  color: #aaa
   text-decoration: none
   font-weight: bold
-  font-size: 12px
-
-.moment-bm-labels-link:hover
-  background-color: #aaa
-  color: #fff
+  font-size: 14px
+  border: 1px solid #ddd
 
 
 // !Friends tab
