--- a/app/assets/stylesheets/_bookmarks.sass
+++ b/app/assets/stylesheets/_bookmarks.sass
@@ -45,31 +45,43 @@
   margin: 0
 
   .label
-    margin: 4px 0 4px 1em
+    margin: 4px 0 4px 4px
     float: left
     padding: 0 5px
     position: static
     +border-radius(4px)
-    border: 1px solid #ccc
+    border: 1px solid #ddd
     .moment-bm-labels-link
       background-color: #ccc
     .label-count
       color: #fff
-      padding: 2px 3px
-      background-color: #ccc
-      +border-radius(10px)
-      min-width: 12px
+      padding: 0 3px 1px
+      background-color: #b5b5b5
+      +border-radius(3px)
+      font-size: 12px
+    a
+      color: #aaa
     &.selected
-      padding: 0 5px
-      margin: 4px
+      padding: 0 5px 2px
       +border-radius(4px)
-      background-color: #bbbbbb
+      background-color: #6AB750
+      border: none
       a
         color: #fff
+      .label-count
+        background-color: #599943
 
   .label:first-child
     margin-left: 0
 
+  .all-label
+    border: none
+    margin-top: 5px
+    a
+      color: #0084c8
+
+  .all-label.selected
+    display: none
 
 
 // Mobile bookmark styles
