--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -246,13 +246,13 @@
 .moment-bm-labels-link
   display: inline-block
   padding: 0px 7px 2px
-  background-color: #bbb
   +border-radius(4px)
   margin-left: 2px
-  color: #fff
+  color: #aaa
   text-decoration: none
   font-weight: bold
   font-size: 12px
+  border: 1px solid #ddd
 
 .moment-bm-labels-link:hover
   background-color: #aaa
