YV-2665 fix style rules lost after reading plan about page mods - this fixes start plan layer within moment

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -980,6 +980,27 @@ body.transition .moment
     .progress_wrap
       margin-bottom: 0
 
+.plan-privacy-buttons
+  display: none
+  background: #FFF
+  overflow: auto
+  padding: 15px
+
+  .detail-text
+    text-align: center
+    margin-bottom: 15px
+    font-weight: bold
+
+  .button-private,
+  .button-public
+    width: 32%
+
+  .button-private
+    float: right
+
+  .button-public
+    float: left
+
 // !Group moment
 
 .moment-grp
@@ -1313,7 +1334,7 @@ html[data-locale="af"]
 
   ul
     display: inline
-    //@extend .clearfix
+  //@extend .clearfix
 
   li
     float: left
