--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -999,6 +999,29 @@ input[type="submit"].moment-fr-name-add
       display: block
       margin-top: 10px
 
+.plan-privacy-buttons
+  display: none
+  background: #FFF
+  overflow: auto
+  padding: 15px
+
+  .detail-text
+    text-align: center
+    margin-bottom: 15px
+    font-weight: bold
+
+  .button-private,
+  .button-public
+    width: 38%
+
+  .button-private
+    float: right
+    margin-right: 10px
+
+  .button-public
+    float: left
+    margin-left: 10px
+
 // !Group moment
 
 .moment-grp
