--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -10,7 +10,7 @@
   position: relative
   margin-left: 10px
 
-#sidebar.fixed
+body.reading_plan #sidebar
   position: fixed
   margin-left: 610px
   margin-right: 0
