Bookmark padding PixelPerfect

--- a/app/assets/stylesheets/_bookmarks.sass
+++ b/app/assets/stylesheets/_bookmarks.sass
@@ -62,7 +62,7 @@
     a
       color: #aaa
     &.selected
-      padding: 0 5px 2px
+      padding: 1px 5px
       +border-radius(4px)
       background-color: #6AB750
       border: none
