--- a/app/views/sidebars/plans/_show.html.haml
+++ b/app/views/sidebars/plans/_show.html.haml
@@ -2,6 +2,15 @@
 // presenter: Presenter::Sidebar::Plan
 - plan = presenter.plan
 
+
+:javascript 
+  $(document).ready(function() {
+    $('.rp-view-all a').click(function() {
+      $(this).parent().children('a').toggle();
+      $(this).parent().prev().toggleClass('open');
+    });
+  });
+
 .widget
   %h3.hd
     =t("plans.publisher")
@@ -10,18 +19,17 @@
   - unless plan.publisher_url.nil?
     %div.ft.link
       = link_to(t("plans.about publisher"), plan.publisher_url)
-
-- if plan.friends_reading.length > 0
+- if @friends_reading.length > 0
   .widget.rp-reading
     %h3.hd
-      =t("plans.stats.friends reading", count: plan.friends_reading.length)
+      =t("plans.stats.friends reading", count: @friends_reading.length)
     .rp-widget-avatars
-      - plan.friends_reading.each do |friend|
+      - @friends_reading.each do |friend|
         - if friend["avatar"].present?
           %a{href: users_path(friend["username"]), title: friend["name"]}
-            = image_tag friend["avatar"]["renditions"].select {|a| a["width"] >= 128 }.max
+            = image_tag friend["avatar"]["renditions"].select {|a| a["width"] >= 128 }.max{|a| a[:width] }["url"]
 
-    - if plan.friends_reading.length > 6
+    - if @friends_reading.length > 6
       .rp-view-all
         %hr
         %a.open{href: "#"}
@@ -30,16 +38,16 @@
           =t("plans.stats.close")
 
 
-- if plan.friends_completed.length > 0
+- if @friends_completed.length > 0
   .widget.rp-friends-completed
     %h3.hd
-      =t("plans.stats.friends completed", count: plan.friends_completed.length)
+      =t("plans.stats.friends completed", count: @friends_completed.length)
     .rp-widget-avatars
-      - plan.friends_completed.each do |friend|
+      - @friends_completed.each do |friend|
         - if friend["avatar"].present?
           %a{href: users_path(friend["username"]), title: friend["name"]}
-            = image_tag friend["avatar"]["renditions"].select {|a| a["width"] >= 128 }.max
-    - if plan.friends_completed.length > 6
+            = image_tag friend["avatar"]["renditions"].select {|a| a["width"] >= 128 }.max{|a| a[:width] }["url"]
+    - if @friends_completed.length > 6
       .rp-view-all
         %hr
         %a.open{href: "#"}
