--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -723,7 +723,9 @@ html[data-locale="en"]
     background-color: #fff
     padding: 10px 10px 5px
     overflow: hidden
-
+    height: 55px
+    &.open
+      height: 100%
     a
       width: 40px
       height: 40px
@@ -754,14 +756,18 @@ html[data-locale="en"]
 
     a
       display: block
-      background: #fff image-url("arrows-down@2x.png") no-repeat center center
-      background-size: 12px 11px
       height: 30px
       width: 41px
       text-indent: 100%
       overflow: hidden
       white-space: nowrap
       margin: -17px auto 0
+      &.open
+        background: #fff image-url("arrows-down@2x.png") no-repeat center center
+        background-size: 12px 11px
+      &.close
+        display: none
+        margin: 0 auto
 
 .rp-all-completed
   background: #dedddb image-url("rp_about_users.png") no-repeat center top
