Added up arrows to rp friends widgets

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -767,7 +767,8 @@ html[data-locale="en"]
         background-size: 12px 11px
       &.close
         display: none
-        margin: 0 auto
+        background: #fff image-url("arrows-up@2x.png") no-repeat center center
+        background-size: 12px 11px
 
 .rp-all-completed
   background: #dedddb image-url("rp_about_users.png") no-repeat center top
