--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -762,11 +762,12 @@ html[data-locale="en"]
       overflow: hidden
       white-space: nowrap
       margin: -17px auto 0
+      &.hidden
+        display: none
       &.open
         background: #fff image-url("arrows-down@2x.png") no-repeat center center
         background-size: 12px 11px
       &.close
-        display: none
         background: #fff image-url("arrows-up@2x.png") no-repeat center center
         background-size: 12px 11px
 
