fix spacing and read/unread indicator

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -473,7 +473,7 @@
               size: 15px
               weight: normal
             color: #444
-            background: image-url("cal-bullet@2x.png") no-repeat center 38px
+            background: image-url("cal_bullet@2x.png") no-repeat center 38px
             background-size: 8px 8px
 
           .calendar-cal-day.selected
