fix rp moments to show comment and like messaging, hide comment, like messaging on detail pages

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -268,6 +268,11 @@ body.transition .moment
   background-color: #EEEDEB
   margin-bottom: 2px
 
+.moment-detail
+  .moment-comments-likes,
+  .moment-comments-more
+    display: none
+
 .moment-comments-list-avatar,
 .moment-comments-input-avatar
   +border-radius(24px)
