--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -285,6 +285,11 @@ body.transition .moment
   background-color: #EEEDEB
   margin-bottom: 2px
 
+.moment-detail
+  .moment-comments-likes,
+  .moment-comments-more
+    display: none
+
 .moment-comments-list-avatar,
 .moment-comments-input-avatar
   +border-radius(24px)
