--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
   container_classes << "no_sidebar" if @sidebar == false
   container_classes << "no_primary_nav" if @main_nav == false
   container_class_str = container_classes.join(" ")
-  body_class = @body_class
+  body_class = "#{@body_class.to_s ( yield(:body_class) if content_for?(:body_class) }
 
 %html{class: (@html_classes.join(' ') if @html_classes), "data-locale" => I18n.locale, "data-default-locale" => I18n.default_locale, id: @html_id, "data-logged-in" => logged_in?.to_s, "data-user-id" => logged_in? ? current_auth.user_id : nil, "data-user-name" => logged_in? ? current_auth.username : nil, "data-user-avatar" => logged_in? ? current_user.user_avatar_url["px_48x48"] : nil}
 
