--- a/app/assets/stylesheets/_bookmarks.sass
+++ b/app/assets/stylesheets/_bookmarks.sass
@@ -45,27 +45,34 @@
   margin: 0
 
   .label
-    margin: 4px 0 4px 4px
+    margin: 4px 4px 4px 0px
     float: left
-    padding: 0 5px
     position: static
     +border-radius(4px)
     border: 1px solid #ddd
+    &:hover
+      background-color: #aaa
+      a
+        color: #fff
     .moment-bm-labels-link
       background-color: #ccc
     .label-count
       color: #fff
-      padding: 0 3px 1px
+      padding: 0 5px 1px 5px
       background-color: #b5b5b5
       +border-radius(3px)
       font-size: 12px
+      margin: 0 4px 0 2px
     a
       color: #aaa
+      padding: 5px 0px 5px 5px
     &.selected
       padding: 1px 5px
       +border-radius(4px)
       background-color: #6AB750
       border: none
+      &:hover, a:hover, span:hover
+        cursor: default
       a
         color: #fff
       .label-count
@@ -78,6 +85,7 @@
     border: none
     margin-top: 5px
     a
+      padding: 0 5px
       color: #0084c8
 
   .all-label.selected
