flip social to left side of modal and fix twitter text input

--- a/app/assets/stylesheets/_modal_window.sass
+++ b/app/assets/stylesheets/_modal_window.sass
@@ -104,7 +104,7 @@
 
   section
     background: image-url("modal_section.png") no-repeat right top
-    margin-right: 140px
+    margin-left: 140px
     padding: 30px 50px 20px
 
   aside
@@ -113,8 +113,8 @@
     padding: 20px 20px 0
     position: absolute
     top: 50px
-    left: auto
-    right: 0
+    left: 0
+    right: auto
     bottom: 0
     width: 100px
 
