--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -401,7 +401,8 @@ body.transition .moment
 .moment-no,
 .moment-vod,
 .moment-sys,
-.moment-fr
+.moment-fr,
+.moment-featured-rp
   position: relative
   padding: 15px
   overflow: hidden
@@ -1061,6 +1062,70 @@ body.transition .moment
 .profile-badges-list .moment:nth-child(even)
   margin-right: 0
 
+
+// ! Featured plan moment
+
+#main
+
+  .moment-featured-rp
+    +border-radius(4px)
+    padding: 15px 0
+
+    .moment-rp-text
+      float: none
+      background: image-url("svg/featured-star.svg") no-repeat center left
+      background-size: 24px 24px
+      height: 24px
+      line-height: 26px
+      padding: 0 0 0 30px
+      margin: 0 0 15px 20px
+
+    .featured-rp-box
+      overflow: hidden
+      position: relative
+      clear: both
+      height: 210px
+
+      .featured-rp-box-next,
+      .featured-rp-box-prev
+        position: absolute
+        width: 44px
+        height: 44px
+        top: 55px
+        background: image-url("svg/arrow-circle-grey.svg") no-repeat center center
+        text-indent: 100%
+        overflow: hidden
+        white-space: nowrap
+        opacity: .75
+
+      .featured-rp-box-next
+        right: 25px
+        +transform(rotate(180deg))
+
+      .featured-rp-box-prev
+        left: 25px
+
+      .featured-rp-box-next:hover,
+      .featured-rp-box-prev:hover
+        opacity: 1
+
+      .featured-rp-box-plan
+        width: 210px
+        padding: 0 10px
+        text-align: center
+        float: left
+        opacity: .3
+
+        img
+          width: 210px
+          display: block
+          margin: 0 0 10px
+
+        p
+          line-height: 1.3em
+
+        &.active
+          opacity: 1
 
 
 // !------------------------ Detail page -------------------------
