add versions link to footer and add anchor link for versions on home

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -77,7 +77,7 @@
         %div.pod_content
           %h2= t(".features.read heading")
           %p
-            %span.narrow= t(".features.read description").html_safe
+            %span.narrow= t(".features.read description", versions_path: versions_path).html_safe
 
       %li.study_bible
         %div.pod_content
