link rel=alternate hreflang tags for alternate locale indexing

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
 
   %head{lang: I18n.locale}
     = csrf_meta_tags
+    = render '/shared/hreflang' unless is_whitelabel_site
     = render '/shared/head'
     = render '/shared/javascripts'
     = render '/shared/google_analytics'
