custom for BAFK page

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -42,6 +42,8 @@
     %meta{name: "twitter:description",      content: meta_description}
     %meta{name: "twitter:image",            content: "#{url_for(asset_path('BibleAppForKids-icon-120x120.png'))}"}
     %meta{name: "twitter:site",             content: "@BibleAppForKids"}
+    %link{:href=> "https://www.bible.com/kids",:rel=>"alternate",:hreflang=>"en"}
+    %link{:href=> "https://www.bible.com/es/kids",:rel=>"alternate",:hreflang=>"es"}
 
     = stylesheet_link_tag "campaigns/kids"
     = javascript_include_tag "//use.typekit.net/mgk8ovf.js"
