add kids page canonical tag

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -44,6 +44,7 @@
     %meta{name: "twitter:site",             content: "@BibleAppForKids"}
     %link{:href=> "https://www.bible.com/kids",:rel=>"alternate",:hreflang=>"en"}
     %link{:href=> "https://www.bible.com/es/kids",:rel=>"alternate",:hreflang=>"es"}
+    %link{rel: "canonical", href: "https://www.bible.com/kids"}
 
     = stylesheet_link_tag "campaigns/kids"
     = javascript_include_tag "//use.typekit.net/mgk8ovf.js"
