--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -1073,18 +1073,19 @@ body.transition .moment
 
     .moment-rp-text
       float: none
-      background: image-url("svg/featured-star.svg") no-repeat center left
       background-size: 24px 24px
       height: 24px
       line-height: 26px
       padding: 0 0 0 30px
       margin: 0 0 15px 20px
 
+    .moment-avatar
+      height: 42px
     .featured-rp-box
       overflow: hidden
       position: relative
       clear: both
-      height: 210px
+      height: 310px
 
       .featured-rp-box-next,
       .featured-rp-box-prev
@@ -1114,8 +1115,6 @@ body.transition .moment
         padding: 0 10px
         text-align: center
         float: left
-        opacity: .3
-
         img
           width: 210px
           display: block
@@ -1124,8 +1123,6 @@ body.transition .moment
         p
           line-height: 1.3em
 
-        &.active
-          opacity: 1
 
 
 // !------------------------ Detail page -------------------------
