--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -1,4 +1,9 @@
 - @sidebar = false
+- content_for :stylesheets do
+  = stylesheet_link_tag "slick"
+- content_for :javascripts do
+  = javascript_include_tag "slick"
+
 #spinner
 .social-feed-wrap{"data-str-load-more" => t("moments.action.load more")}
   :javascript
