Removed button background from SASS declaration

--- a/app/assets/stylesheets/_formalize.sass
+++ b/app/assets/stylesheets/_formalize.sass
@@ -103,7 +103,7 @@ input[type="button"]
   -webkit-appearance: none
   +border-radius(4px)
   +background-clip(padding-box)
-  background: #ddd image-url("button.png") repeat-x
+  background-color: #ddd
   border: 1px solid
   border-color: #ddd #bbb #999
   cursor: pointer
@@ -271,7 +271,7 @@ optgroup
 
 .ie6_button,
 * html button
-  background: #ddd image-url("button.png") repeat-x
+  background-color: #ddd
   border: 1px solid
   border-color: #ddd #bbb #999
   cursor: pointer
