--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -1063,7 +1063,7 @@ body.transition .moment
   margin-right: 0
 
 
-// ! Featured plan moment
+// !Featured plan moment
 
 #main
 
@@ -1071,58 +1071,85 @@ body.transition .moment
     +border-radius(4px)
     padding: 15px 0
 
-    .moment-rp-text
-      float: none
-      background-size: 24px 24px
-      height: 24px
-      line-height: 26px
-      padding: 0 0 0 30px
-      margin: 0 0 15px 20px
+    .featured-rp-title
+      overflow: hidden
+      margin: 0 0 12px
 
     .moment-avatar
-      height: 42px
+      margin: 0 0 0 15px
+
+      img
+        height: 40px
+        width: 40px
+
+    .moment-rp-text
+      margin-bottom: 3px
+
     .featured-rp-box
       overflow: hidden
       position: relative
       clear: both
-      height: 310px
 
-      .featured-rp-box-next,
-      .featured-rp-box-prev
+      .slick-list
+        padding: 0 !important
+
+      .slick-next,
+      .slick-prev
         position: absolute
         width: 44px
         height: 44px
-        top: 55px
+        top: 37px
         background: image-url("svg/arrow-circle-grey.svg") no-repeat center center
         text-indent: 100%
         overflow: hidden
         white-space: nowrap
-        opacity: .75
+        opacity: .85
+        padding: 0
+        +box-shadow(none)
 
-      .featured-rp-box-next
+      .slick-next
         right: 25px
+        -ms-transform: rotate(90deg)
         +transform(rotate(180deg))
+        background-position: left center
+        width: 45px
 
-      .featured-rp-box-prev
+      .slick-prev
         left: 25px
 
-      .featured-rp-box-next:hover,
-      .featured-rp-box-prev:hover
+      .slick-next:hover,
+      .slick-prev:hover
         opacity: 1
 
+      .slick-track
+        overflow: hidden
+
       .featured-rp-box-plan
-        width: 210px
         padding: 0 10px
         text-align: center
         float: left
-        img
-          width: 210px
+
+        a
           display: block
-          margin: 0 0 10px
+          width: 210px
 
-        p
-          line-height: 1.3em
+          img
+            display: block
+            width: 210px
 
+          p
+            line-height: 1.3em
+            font-weight: normal
+            display: block
+            color: #444
+            padding: 10px 0 0
+            margin-bottom: 5px
+
+      .slick-slide
+        opacity: .3
+
+      .slick-active
+        opacity: 1
 
 
 // !------------------------ Detail page -------------------------
