--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1109,6 +1109,9 @@ input[type="submit"].moment-fr-name-add
       position: relative
       clear: both
 
+      .slick-list:focus
+        outline: none
+
       .featured-rp-box-plan
         width: 210px
         padding: 0 10px
@@ -1130,6 +1133,12 @@ input[type="submit"].moment-fr-name-add
             color: #444
             padding: 10px 0 0
             margin-bottom: 5px
+
+      .slick-slide
+        opacity: .3 !important
+
+      .slick-center
+        opacity: 1 !important
 
 
 // !------------------------ Detail page -------------------------
