--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1136,10 +1136,10 @@ input[type="submit"].moment-fr-name-add
 
       .slick-slide
         opacity: .3 !important
-
+        transition: all 300ms ease
       .slick-center
         opacity: 1 !important
-
+        transition: all 300ms ease
 
 // !------------------------ Detail page -------------------------
 
