--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -1150,10 +1150,10 @@ body.transition .moment
 
       .slick-slide
         opacity: .3 !important
-
+        transition: all 300ms ease
       .slick-center
         opacity: 1 !important
-
+        transition: all 300ms ease
 
 // !------------------------ Detail page -------------------------
 
